Bug 61345, 62388         For bug 61345         Add vertical divider to all the zca ui toolbar         For bug 62388         Modify the way to generate defalut server.         Adjust the spacing around controls is too huge, too spacious, for         Installation types and Basic Information screeens. Move the text         boxes closer to the labels.         Change the select step name's font color and remove the selected         item's background         Change the background color of Zimbra Service Status bar         Fix some bugs that has hard reference to ZaConfigXwiard. It will         cause js error.         Remove some hard code label name. Integrate from ZCA-711 to main
http://bugzilla.zimbra.com/show_bug.cgi?id=61345
http://bugzilla.zimbra.com/show_bug.cgi?id=62388

Copied from Perforce
 Change: 324473

--- a/WebRoot/css/zmadmin.css
+++ b/WebRoot/css/zmadmin.css
@@ -1,7 +1,7 @@
 /*
  * ***** BEGIN LICENSE BLOCK *****
  * Zimbra Collaboration Suite Web Client
- * Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009, 2010 Zimbra, Inc.
+ * Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011 Zimbra, Inc.
  * 
  * The contents of this file are subject to the Zimbra Public License
  * Version 1.3 ("License"); you may not use this file except in
@@ -145,6 +145,24 @@
 	border-width: 0px 0px 1px 0px;
 	border-color: @darken(AppC,55)@;
 	@ToolbarBg@
+}
+
+.ZaLeftBracket {
+	@LeftSeparator@
+    @TopSeparator@
+    @BottomSeparator@
+	margin-left:3px;
+	padding-right:4px;
+	height: 16px;
+}
+
+.ZaRightBracket {
+	@RightSeparator@
+    @TopSeparator@
+    @BottomSeparator@
+	margin-left:3px;
+	padding-right:4px;
+	height: 16px;
 }
 
 .ZaUpdatedLabel {
